public/css/style.css
body {
  font-family: 'Raleway', Helvetica, Arial, sans-serif;
  background-size: 100% auto;
  margin: 0;
  padding: 0;
}

.container-fluid{
  padding: 0px;
  margin: 0px;
}

p {
  font-family: 'Roboto', sans-serif;
  font-size: 15px;
  font-weight: 300;
  line-height: 23px;
  letter-spacing: 0.2px;
}

a { color: inherit; } 

a:hover {
  color: inherit;
  text-decoration:  inherit;
}

.dark {
  color: white;
}

.light {
  color: #43464B;
}

.center {
  text-align: center;
}

.panel1 {
  background-color:rgb(42,68,83);
  background: url("background1.jpg") no-repeat;
  height: 100vh;
  background-size: cover;
  background-attachment: fixed;
  padding: 40px 0px;
}

.panel-light {
  background-color: #FEFEFF;
  color: #43464B;
  padding: 5% 20%;
}

.panel-dark {
  background-color: #EFEFEF;
  color: #43464B;
  padding: 5% 20%;
}

.footer{
  background-color:rgb(42, 68, 83);
  background: url("background1.jpg") no-repeat;
  background-size: cover;
  background-attachment: fixed;
  padding: 5% 5%;
  text-align: center;
}

.footer a:hover{
  text-decoration: underline;
}

.card-heading{
  font-size: 20px;
  font-style: bold;
  color: #43464B;
  padding: 8px 0px;
}

.card-subheading{
  font-size: 15px;
  font-style: italic;
  padding: 0px;
  margin: 0px;
}

.fredericka {
  font-family: 'Fredericka the Great','Bad Script', 'Raleway', Helvetica, sans-serif;
}

.icons {
  color: white; 
  margin: 35vh 0 8vh;
  font-size: 4vh;
/*  font-size: 30px; 
  padding: 0 0em 0;
  position: absolute;
  bottom: 10vh;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;*/
}

/*Link is for individual icons*/
.link {
  color: white;
  margin: 0em .5em;
  -webkit-transition: all 0.1s ease-in-out;
  -moz-transition: all 0.1s ease-in-out;
  -ms-transition: all 0.1s ease-in-out;
  -o-transition: all 0.1s ease-in-out;
  transition: all 0.1s ease-in-out;
}

.link:hover {
  color: #20C6FF;
  /*color: yellow;*/
  -webkit-transition: all 0.1s ease-in-out;
  -moz-transition: all 0.1s ease-in-out;
  -ms-transition: all 0.1s ease-in-out;
  -o-transition: all 0.1s ease-in-out;
  transition: all 0.1s ease-in-out;
}

.down-arrow {
 /* position: absolute;
  bottom: 3vh;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;*/
  position: relative;

  background-image: url("down-arrow.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  height: 5vh;
  width: 10vh;
  margin: 5vh 0vh 10vh;
  margin-left: auto;
  margin-right: auto;

  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -ms-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.down-arrow:hover {
  height: 6vh;
  width: 11vh;
  margin-top: 7vh;

  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -ms-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.down-arrow.scrolled {
  visibility: hidden;
  height: 0px;
  width: 0px;

  -webkit-transition: all .4s ease-in-out;
  -moz-transition: all .4s ease-in-out;
  -ms-transition: all .4s ease-in-out;
  -o-transition: all .4s ease-in-out;
  transition: all .4s ease-in-out;
}


.display-card {
  position: relative;
  background-color: white;
  line-height: 130%;
  height: 100%;
  width: 100%;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  border-radius: 5px;
  padding: 5px;
  margin: 30px auto;
}

.img-card{
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  border-right: 2px solid rgba(0,0,0,.2);
  height: auto;
  max-width: 100%;
  padding: 0px;
  padding-right: 2px;
  position: relative;
}

.navbar {
  background-color: transparent;
  background: transparent;
  border-color: transparent;
  margin: 0px 30px;
}

.navbar-toggle {
  /*background-color: white;*/
  color: black;
  margin: 10px;
}

.navbar-button {
  background-color: transparent;
  color: inherit;
  text-decoration: none;
  font-weight: normal;
  border: 2px solid #ddd;
  /*border-radius: 5px*/
  padding: 10px 30px;
  -webkit-transition: all 0.1s ease-in-out;
  -moz-transition: all 0.1s ease-in-out;
  -ms-transition: all 0.1s ease-in-out;
  -o-transition: all 0.1s ease-in-out;
  transition: all 0.1s ease-in-out;
}

.navbar-fixed-top{
  -webkit-transition: background-color 300ms ease-in;
  -moz-transition: background-color 300ms ease-in;
  -ms-transition: background-color 300ms ease-in;
  -o-transition: background-color 300ms ease-in;
  transition: background-color 300ms ease-in;
  margin: 0px !important;
  padding: 0px 30px !important;
}

.navbar-fixed-top.scrolled {
  background-color: rgb(42, 68, 83) !important;
  margin:0px !important;
  padding: 0px 30px !important;
  -webkit-transition: background-color 300ms ease-in;
  -moz-transition: background-color 300ms ease-in;
  -ms-transition: background-color 300ms ease-in;
  -o-transition: background-color 300ms ease-in;
  transition: background-color 300ms ease-in;
}

.navbar-brand{
  margin:10px 15px 0px;
  padding:10px;
}

.navbar-default .navbar-toggle .icon-bar{
  background-color: yellow;
}

.navbar-default .navbar-brand{
  color: white !important;
}

.navbar-default .navbar-brand:hover{
  text-decoration: underline;
}

.navbar-default .navbar-nav>.active>a,
.navbar-default .navbar-nav>.active>a:hover{
  border-radius: 15px;

}

.navbar-default .navbar-nav>.active>a:focus{
  color: rgb(42, 68, 83);
  border-radius: 15px;
}

.navbar-default .navbar-nav>li>a{
  color: white;
  margin: 10px 7px 0px;
  padding: 10px 30px;
}

.navbar-default .navbar-nav>li>a:hover {   
  background-color: rgba(255, 255, 255, 0.3);
  color: white;
  -webkit-transition: background 0.3s ease-in-out;
  -moz-transition: background 0.3s ease-in-out;
  -ms-transition: background 0.3s ease-in-out;
  -o-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  text-decoration: underline;
  border-radius: 15px;

}


.title {
  font-family: 'Bad Script', 'Raleway', Helvetica, sans-serif;
  padding-top: 15vh;
}

.heading{
  font-family: 'Bad Script', 'Raleway', Helvetica, sans-serif;
  font-size: 40px;
  margin: 0px;
  padding: 0px 10px 10px;
}

.cartoon{
  position: relative;
  margin: 20px 20px 0px;
  height: 50vh;
  width: auto;
}

.relative{
  position: relative !important;
  height:auto;
  width: auto;

}

